[gd_scene load_steps=2 format=3 uid="uid://word_bomb"]

[ext_resource type="Script" path="res://scripts/games/word_bomb.gd" id="1_bomb"]

[node name="WordBomb" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bomb")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.08, 0.12, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 60.0
offset_right = -40.0
offset_bottom = -40.0
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ðŸ’£ Word Bomb"

[node name="Spacer" type="Control" parent="VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimerLabel" type="Label" parent="VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = "10"

[node name="CurrentPlayerSection" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TurnLabel" type="Label" parent="VBox/CurrentPlayerSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Current turn:"
horizontal_alignment = 1

[node name="PlayerName" type="Label" parent="VBox/CurrentPlayerSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Player Name"
horizontal_alignment = 1

[node name="LettersSection" type="VBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="PromptLabel" type="Label" parent="VBox/LettersSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Type a word containing:"
horizontal_alignment = 1

[node name="LetterCombo" type="Label" parent="VBox/LettersSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "TH"
horizontal_alignment = 1

[node name="BombIcon" type="Label" parent="VBox/LettersSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "ðŸ’£"
horizontal_alignment = 1

[node name="InputSection" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="WordInput" type="LineEdit" parent="VBox/InputSection"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
placeholder_text = "Type your word..."
alignment = 1
max_length = 30

[node name="SubmitButton" type="Button" parent="VBox/InputSection"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Submit"

[node name="FeedbackLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1

[node name="PlayersStatus" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 1.0
autostart = false
